# 2D_games_launcher

./: .gitignore  CMakeLists.txt  CsvHandler.cpp  README.md  library.cpp  records.csv  testCSV.csv
games/snake/: CMakeLists.txt
games/snake/include/: SnakeMain.h  WindowManager.h
games/snake/src/: GameLogic.h  SnakeMain.cpp  WindowManager.cpp
games/snake2/: CMakeLists.txt  libsnake.dylib
games/snake2/include/: SnakeMain.h
games/snake2/src/: GameLogic.cpp  GameLogic.h  Snake.cpp  SnakeMain.cpp
games/tetris/: CMakeLists.txt  libtetris.dylib
games/tetris/include/: TetrisMain.h
games/tetris/src/: TetrisMain.cpp  gameLogic.cpp  gameLogic.h  shapes.cpp
include/: CsvHandler.h  WindowManager.h  buttonHandler.h
src/: CsvHandler.cpp  WindowManager.cpp  buttonHandler.cpp  buttonHandler.h  main.cpp
